--- a/TODO.txt
+++ b/TODO.txt
@@ -25,6 +25,7 @@ Parralel Coordinate Plots
 Dokumentation
 	function documentation: for all vis: explain applicable config? (not extra data)
 	update other general vis, create for PCP
+	"title level" #, or ## ?
 	Liste and zeug
 	Tutorials
 	Example
