redone axis and label settings

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,8 @@ Issues:
 	Plot method is in plotConfig
 	butterfly plot fixen topoLegend
 	remove plot and plot_results in docs and readme
+	remove TODO
+	remove ylims/xlims from doc
 
 
 
