--- a/joss_paper/paper.bib
+++ b/joss_paper/paper.bib
@@ -119,6 +119,7 @@
   license = {MIT},
   title = {{EEGToolkit.jl}},
   version = {0.2},
+  year = {2024},
   url = {https://github.com/slopezpereyra/EEGToolkit.jl}
 }
 
@@ -138,6 +139,7 @@
   license = {BSD-3-Clause},
   title = {{Neuroimaging.jl}},
   version = {1.1.2},
+  year = {2021},
   url = {https://github.com/rob-luke/Neuroimaging.jl}
 }
 
@@ -184,7 +186,7 @@
 
 @software{topoplots_jl,
     year={2024},
-    author = {{Ehinger}, Benedikt and {Singhvi}, Anshul and {Danisch}, Simon},
+    author = {{Ehinger}, Benedikt and {Phillip} Alday and {Singhvi}, Anshul and {Danisch}, Simon},
     title = {TopoPlots.jl: A Julia package for topoplot generation},
     version = {0.1.9},
     url = {https://github.com/MakieOrg/TopoPlots.jl}
@@ -215,4 +217,61 @@
   author={Moreland, Kenneth D},
   year={2015},
   institution={Sandia National Lab.(SNL-NM), Albuquerque, NM (United States)}
+}
+
+
+@software{simon_kornblith_2023_8344531,
+author = {Simon Kornblith and
+Galen Lynch and
+Martin Holters and
+João Felipe Santos and
+Spencer Russell and
+Jay Kickliter and
+Jeff Bezanson and
+Gudmundur Adalsteinsson and
+Alex Arslan and
+Ryuichi Yamamoto and
+jordancluts and
+Matti Pastell and
+Tony Kelman and
+Ben Arthur and
+Tom Krauss and
+HDictus and
+Hamza El-Saawy and
+Jared Kofron and
+Eric Hanson and
+Rob Luke and
+Viral B. Shah and
+Aleco Kastanos and
+Bill and
+Clemens and
+Elliot Saba and
+ibadr and
+Jake Bolewski and
+Jordan Smith},
+title = {JuliaDSP/DSP.jl: v0.7.9},
+month = sep,
+year = 2023,
+publisher = {Zenodo},
+version = {v0.7.9},
+doi = {10.5281/zenodo.8344531},
+url = {https://doi.org/10.5281/zenodo.8344531}
+}
+
+@article{JSSv107i04,
+ title={DataFrames.jl: Flexible and Fast Tabular Data in Julia},
+ volume={107},
+ url={https://www.jstatsoft.org/index.php/jss/article/view/v107i04},
+ doi={10.18637/jss.v107.i04},
+ number={4},
+ journal={Journal of Statistical Software},
+ author={Bouchet-Valat, Milan and Kamiński, Bogumił},
+ year={2023},
+ pages={1--32}
+}
+
+@software{Schepers_UnfoldSim_jl,
+author = {Schepers, Judith and Lips, Luis and Marathe, Maanik and Ehinger, Benedikt},
+title = {{UnfoldSim.jl}},
+url = {https://github.com/unfoldtoolbox/UnfoldSim.jl}
 }
