--- a/joss_paper/paper.bib
+++ b/joss_paper/paper.bib
@@ -13,6 +13,7 @@
   author={Ehinger, Benedikt V and Dimigen, Olaf},
   journal={PeerJ},
   volume={7},
+  doi={10.5281/zenodo.5759066},
   pages={e7838},
   year={2019},
   publisher={PeerJ Inc.}
