--- a/joss_paper/paper.bib
+++ b/joss_paper/paper.bib
@@ -272,7 +272,8 @@ url = {https://doi.org/10.5281/zenodo.8344531}
 }
 
 @software{Schepers_UnfoldSim_jl,
-author = {Schepers, Judith and Lips, Luis and Marathe, Maanik and Ehinger, Benedikt},
-title = {{UnfoldSim.jl}},
-url = {https://github.com/unfoldtoolbox/UnfoldSim.jl}
+  author = {Schepers, Judith and Lips, Luis and Marathe, Maanik and Ehinger, Benedikt},
+  title = {{UnfoldSim.jl}},
+  year={2024},
+  url = {https://github.com/unfoldtoolbox/UnfoldSim.jl}
 }
