--- a/joss_paper/paper.bib
+++ b/joss_paper/paper.bib
@@ -12,8 +12,8 @@
   title={Unfold: an integrated toolbox for overlap correction, non-linear modeling, and regression-based EEG analysis},
   author={Ehinger, Benedikt V and Dimigen, Olaf},
   journal={PeerJ},
-  volume={7},
   doi={10.5281/zenodo.5759066},
+  volume={7},
   pages={e7838},
   year={2019},
   publisher={PeerJ Inc.}
@@ -49,7 +49,7 @@
 
 @article{ehinger2018eegvis,
   title={EEGVIS toolbox},
-  author={Ehinger, BV},
+  author={Ehinger, Benedikt V},
   journal={Osnabr{\"u}ck.[Google Scholar]},
   year={2018}
 }
@@ -97,7 +97,7 @@
 }
 
 @software{ehigner_2018eegvis,
-  author = {Ehinger, BV},
+  author = {Ehinger, Benedikt V},
   doi = {10.5281/zenodo.1312813},
   title = {{EEGVIS toolbox}},
   url = {https://github.com/behinger/eegvis},
@@ -111,7 +111,7 @@
   title = {{NeuroAnalyzer}},
   version = {0.24.11},
   year = {2024},
-  doi = {https://doi.org/10.5281/zenodo.14010334},
+  doi = {10.5281/zenodo.14010334},
   url = {https://codeberg.org/AdamWysokinski/NeuroAnalyzer.jl}
 }
 
@@ -187,7 +187,7 @@
 
 @software{topoplots_jl,
     year={2024},
-    author = {{Ehinger}, Benedikt and {Phillip} Alday and {Singhvi}, Anshul and {Danisch}, Simon},
+    author = {Ehinger, Benedikt V and {Phillip} Alday and {Singhvi}, Anshul and {Danisch} Simon},
     title = {TopoPlots.jl: A Julia package for topoplot generation},
     version = {0.1.9},
     url = {https://github.com/MakieOrg/TopoPlots.jl}
@@ -223,40 +223,40 @@
 
 @software{simon_kornblith_2023_8344531,
 author = {Simon Kornblith and
-Galen Lynch and
-Martin Holters and
-João Felipe Santos and
-Spencer Russell and
-Jay Kickliter and
-Jeff Bezanson and
-Gudmundur Adalsteinsson and
-Alex Arslan and
-Ryuichi Yamamoto and
-jordancluts and
-Matti Pastell and
-Tony Kelman and
-Ben Arthur and
-Tom Krauss and
-HDictus and
-Hamza El-Saawy and
-Jared Kofron and
-Eric Hanson and
-Rob Luke and
-Viral B. Shah and
-Aleco Kastanos and
-Bill and
-Clemens and
-Elliot Saba and
-ibadr and
-Jake Bolewski and
-Jordan Smith},
-title = {JuliaDSP/DSP.jl: v0.7.9},
-month = sep,
-year = 2023,
-publisher = {Zenodo},
-version = {v0.7.9},
-doi = {10.5281/zenodo.8344531},
-url = {https://doi.org/10.5281/zenodo.8344531}
+  Galen Lynch and
+  Martin Holters and
+  João Felipe Santos and
+  Spencer Russell and
+  Jay Kickliter and
+  Jeff Bezanson and
+  Gudmundur Adalsteinsson and
+  Alex Arslan and
+  Ryuichi Yamamoto and
+  jordancluts and
+  Matti Pastell and
+  Tony Kelman and
+  Ben Arthur and
+  Tom Krauss and
+  HDictus and
+  Hamza El-Saawy and
+  Jared Kofron and
+  Eric Hanson and
+  Rob Luke and
+  Viral B. Shah and
+  Aleco Kastanos and
+  Bill and
+  Clemens and
+  Elliot Saba and
+  ibadr and
+  Jake Bolewski and
+  Jordan Smith},
+  title = {JuliaDSP/DSP.jl: v0.7.9},
+  month = sep,
+  year = 2023,
+  publisher = {Zenodo},
+  version = {v0.7.9},
+  doi = {10.5281/zenodo.8344531},
+  url = {https://doi.org/10.5281/zenodo.8344531}
 }
 
 @article{JSSv107i04,
